<resources>
    <string name="app_name">GroceryStore</string>
    <string name="title_activity_start_screen">StartScreen</string>
    <string name="btn_restock">Restock</string>
    <string name="btn_make_new_delivery">Make New Delivery</string>
    <string name="btn_reassign_employees">Reassign Employees</string>
    <string name="btn_call_in_employee">Call in Employee</string>
    <string name="btn_release_employee">Release Employee</string>
    <string name="tv_stock">Storage Information</string>
    <string name="tv_sales">Financial Information</string>
    <string name="tv_employees">Employee Information</string>
    <string name="tv_Register">Register Information</string>
    <string name="btn_Realtime">Realtime</string>
    <string name="btn_Historical">Historical</string>


    <string name="tv_produce">Produce</string>
    <string name="tv_dryGoods">Dry Goods</string>
    <string name="tv_frozen">Frozen</string>
    <string name="tv_dairy">Dairy</string>
    <string name="tv_registers">Registers</string>
    <string name="tv_total">Total</string>


    <string name="tv_Quantities">Average Product Quantities </string>
    <string name="tv_Storage">Average Storage Quantities </string>
    <string name="tv_Expired">Average Expired Items</string>

    <string name="btn_decisions">MAKE DECISIONS</string>


    <string name="tv_Status">How Many Employees are Active, Idle and Offsite?</string>
    <string name="tv_Where">Where are Active Employees?</string>


    <string name="tv_Shift1">Shift 1</string>
    <string name="tv_Shift2">Shift 2</string>
    <string name="tv_Shift3">Shift 3</string>

    <string name="tv_Shift1Avg">Average Items Sold - Shift 1</string>
    <string name="tv_Shift2Avg">Average Items Sold - Shift 2</string>
    <string name="tv_Shift3Avg">Average Items Sold - Shift 3</string>

    <string name="tv_EstRev">Estimated Revenue</string>
    <string name="tv_EstCost">Estimated Cost</string>
    <string name="tv_EstProfit">Estimated Profit</string>


    <string name="tv_AvgRev">Average Revenue by Items in Dollars</string>
    <string name="tv_AvgCost">Average Costs by Category in Dollars</string>


    <string name="tv_AvgLeaving">Average Items Leaving by shift</string>

    <string name="btn_End">END EXPERIMENT</string>
    <string name="btn_Continue">CONTINUE</string>

    <string name="cashtx">Cash :</string>

    <string name="scheduling">Employee Scheduling </string>
    <string name="scheduling2">Please assign a number to a department to represent the total number of employees per shift. You can assign up to 10 employees in total per shift</string>

    <string name="orderItems">Order Items </string>
    <string name="orderItems2">Please assign a number to represent the amount of product you want to restock and select the type for delivery. Each batch is 25 units. Cost per batch $25.00 </string>

</resources>
